fixed top padding on mobile

--- a/app/styles/partials/_nav.scss
+++ b/app/styles/partials/_nav.scss
@@ -44,19 +44,29 @@ nav a.active {
 	}
 
 	.name-mark {
-		display:none;
+		padding:4px 0;
+		float:left;
+		font-size:12px;
+		text-transform: uppercase;
+		font-weight: 700;
+		color:#999;
 	}
 
-	nav {
-
-}
+	.name-mark > span {
+		font-weight: 700;
+		color:rgba(46,59,78, 1);
+	}
 
 	nav ul {
-  width: 320px;
-}
+  	width: 320px;
+	}
 
-  nav a {  
-		padding:5px 10px; 
-   } 
+	nav a {  
+		padding:5px 8px; 
+ 	} 
+
+ 	.grid {
+		margin: 40px auto;
+	}
 
 }
