--- a/app/styles/partials/_simplegrid.scss
+++ b/app/styles/partials/_simplegrid.scss
@@ -12,10 +12,6 @@
 	box-sizing: border-box;
 }
 
-body {
-	margin: 0px;
-}
-
 [class*='col-'] {
 	float: left;
 	padding-right: 20px;
